# pondside-sdk

./: pyproject.toml  test_telemetry.py
pondside/: __init__.py  telemetry.py
